# reservoir-death-watch

./: .gitignore  AGENT.md  README.md
pipeline/: pyproject.toml
pipeline/data/aois/: README.md  bargi.geojson  bisalpur.geojson  harangi.geojson  hathmati.geojson  hirakud.geojson  indira_sagar.geojson  jawai.geojson  kabini.geojson  krs.geojson  lower_manair.geojson  mahanadi_chhattisgarh.geojson  mettur.geojson  minimata_bango.geojson  nagarjuna_sagar.geojson  nizam_sagar.geojson  pong_dam.geojson  pulichintala.geojson  rengali.geojson  sardar_sarovar.geojson  srisailam.geojson  tehri.geojson  tilaiya.geojson  ukai.geojson  yeleru.geojson
pipeline/data/cwc/: bulletin_2026_04_02.csv  bulletin_2026_04_09.csv  bulletin_2026_04_16.csv  bulletin_2026_04_23.csv  bulletin_2026_04_30.csv  bulletin_2026_05_07.csv  bulletin_2026_05_14.csv  cwc_name_aliases.csv  phase0_storage_2026_04_09.csv
pipeline/scripts/: audit_metadata.py  backfill_history.py  bootstrap_pending_reservoirs.py  clean_aoi_rings.py  fetch_cwc_bulletin.py  fetch_data_gov_in.py  generate_backtest_snapshots.py  investigate_krs_window.py  parse_local_cwc_pdfs.py  quick_extract_current.py  rebuild_storage_from_csv.py  run_phase0_gate.py  run_weekly.sh  seed_aois.py
pipeline/tests/: test_area_volume.py  test_audit_metadata.py  test_backtest.py  test_cwc_scraper.py  test_fetch_cwc.py  test_gee_auth.py  test_healthcheck.py  test_model.py  test_oni.py  test_pipeline_calibration.py  test_pipeline_cwc_temporal.py  test_reservoirs_csv.py  test_sentinel_artifacts.py  test_state_aggregates.py  test_validate.py
(+149 files in other folders)
